refactor: 精简question表查询功能
